[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pdfkit"
version = "0.1.0"
description = "A collection of PDF utility methods."
keywords = [
  "Imaging",
]
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ajrlewis", email = "hello@ajrlewis.com" }
]
dependencies = [
    "reportlab==4.2.2",
]

[tool.setuptools]
packages = ["pdfkit"]
package_dir = {"" = "src"}
include_package_data = true

[options.package_data]
foo = ["src/fonts/*"]
